--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,4 +1,4 @@
 project:
-  title: "Presentation title"
+  title: "Data management plan"
 
-pagetitle: "Presentation title"
+pagetitle: "Data management plan"
